@@ -30,10 +30,8 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
 
 import java.io.BufferedReader;
-import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.nio.file.Paths;
 import java.time.Duration;
 import java.util.Arrays;
 import java.util.HashMap;
@@ -53,6 +51,7 @@ import org.apache.accumulo.core.client.Scanner;
 import org.apache.accumulo.core.client.admin.CompactionConfig;
 import org.apache.accumulo.core.client.admin.ImportConfiguration;
 import org.apache.accumulo.core.client.admin.TabletAvailability;
+import org.apache.accumulo.core.conf.Property;
 import org.apache.accumulo.core.data.Key;
 import org.apache.accumulo.core.data.Mutation;
 import org.apache.accumulo.core.data.Range;
@@ -60,8 +59,8 @@ import org.apache.accumulo.core.data.TableId;
 import org.apache.accumulo.core.data.TabletId;
 import org.apache.accumulo.core.data.Value;
 import org.apache.accumulo.core.manager.state.tables.TableState;
-import org.apache.accumulo.core.metadata.AccumuloTable;
 import org.apache.accumulo.core.metadata.StoredTabletFile;
+import org.apache.accumulo.core.metadata.SystemTables;
 import org.apache.accumulo.core.metadata.schema.MetadataSchema.TabletsSection;
 import org.apache.accumulo.core.metadata.schema.MetadataSchema.TabletsSection.DataFileColumnFamily;
 import org.apache.accumulo.core.metadata.schema.MetadataSchema.TabletsSection.ServerColumnFamily;
@@ -102,139 +101,156 @@ public class ImportExportIT extends AccumuloClusterHarness {
     return Duration.ofMinutes(1);
   }
 
+  private void doExportImportThenScan(boolean fenced, AccumuloClient client, String srcTable,
+      String destTable) throws Exception {
+
+    client.tableOperations().create(srcTable);
+
+    try (BatchWriter bw = client.createBatchWriter(srcTable)) {
+      for (int row = 0; row < 1000; row++) {
+        Mutation m = new Mutation("row_" + String.format("%010d", row));
+        for (int col = 0; col < 100; col++) {
+          m.put(Integer.toString(col), "", Integer.toString(col * 2));
+        }
+        bw.addMutation(m);
+      }
+    }
+
+    client.tableOperations().compact(srcTable, null, null, true, true);
+
+    int expected = 100000;
+    // Test that files with ranges and are fenced work with export/import
+    if (fenced) {
+      // Split file into 3 ranges of 10000, 20000, and 5000 for a total of 35000
+      FileMetadataUtil.splitFilesIntoRanges(getServerContext(), srcTable, createRanges());
+      expected = 35000;
+    }
+
+    // Make a directory we can use to throw the export and import directories
+    // Must exist on the filesystem the cluster is running.
+    FileSystem fs = cluster.getFileSystem();
+    log.info("Using FileSystem: " + fs);
+    Path baseDir = new Path(cluster.getTemporaryPath(), getClass().getName());
+    fs.deleteOnExit(baseDir);
+    if (fs.exists(baseDir)) {
+      log.info("{} exists on filesystem, deleting", baseDir);
+      assertTrue(fs.delete(baseDir, true), "Failed to deleted " + baseDir);
+    }
+    log.info("Creating {}", baseDir);
+    assertTrue(fs.mkdirs(baseDir), "Failed to create " + baseDir);
+    Path exportDir = new Path(baseDir, "export");
+    fs.deleteOnExit(exportDir);
+    Path importDirA = new Path(baseDir, "import-a");
+    Path importDirB = new Path(baseDir, "import-b");
+    fs.deleteOnExit(importDirA);
+    fs.deleteOnExit(importDirB);
+    for (Path p : new Path[] {exportDir, importDirA, importDirB}) {
+      assertTrue(fs.mkdirs(p), "Failed to create " + p);
+    }
+
+    Set<String> importDirs = Set.of(importDirA.toString(), importDirB.toString());
+
+    Path[] importDirAry = new Path[] {importDirA, importDirB};
+
+    log.info("Exporting table to {}", exportDir);
+    log.info("Importing table from {}", importDirs);
+
+    // test fast fail offline check
+    assertThrows(IllegalStateException.class,
+        () -> client.tableOperations().exportTable(srcTable, exportDir.toString()));
+
+    // Offline the table
+    client.tableOperations().offline(srcTable, true);
+    // Then export it
+    client.tableOperations().exportTable(srcTable, exportDir.toString());
+
+    // Make sure the distcp.txt file that exporttable creates is available
+    Path distcp = new Path(exportDir, "distcp.txt");
+    fs.deleteOnExit(distcp);
+    assertTrue(fs.exists(distcp), "Distcp file doesn't exist");
+    FSDataInputStream is = fs.open(distcp);
+    BufferedReader reader = new BufferedReader(new InputStreamReader(is));
+
+    // Copy each file that was exported to one of the imports directory
+    String line;
+
+    while ((line = reader.readLine()) != null) {
+      Path p = new Path(line.substring(5));
+      assertTrue(fs.exists(p), "File doesn't exist: " + p);
+      Path importDir = importDirAry[RANDOM.get().nextInt(importDirAry.length)];
+      Path dest = new Path(importDir, p.getName());
+      assertFalse(fs.exists(dest), "Did not expect " + dest + " to exist");
+      FileUtil.copy(fs, p, fs, dest, false, fs.getConf());
+    }
+
+    reader.close();
+
+    log.info("Import dir A: {}", Arrays.toString(fs.listStatus(importDirA)));
+    log.info("Import dir B: {}", Arrays.toString(fs.listStatus(importDirB)));
+
+    // Import the exported data into a new table
+    client.tableOperations().importTable(destTable, importDirs, ImportConfiguration.empty());
+
+    // Get the table ID for the table that the importtable command created
+    final String tableId = client.tableOperations().tableIdMap().get(destTable);
+    assertNotNull(tableId);
+
+    // Get all `file` colfams from the metadata table for the new table
+    log.info("Imported into table with ID: {}", tableId);
+
+    try (
+        Scanner s = client.createScanner(SystemTables.METADATA.tableName(), Authorizations.EMPTY)) {
+      s.setRange(TabletsSection.getRange(TableId.of(tableId)));
+      s.fetchColumnFamily(DataFileColumnFamily.NAME);
+      ServerColumnFamily.DIRECTORY_COLUMN.fetch(s);
+
+      // Should find a single entry
+      for (Entry<Key,Value> fileEntry : s) {
+        Key k = fileEntry.getKey();
+        String value = fileEntry.getValue().toString();
+        if (k.getColumnFamily().equals(DataFileColumnFamily.NAME)) {
+          // The file should be an absolute URI (file:///...), not a relative path
+          // (/b-000.../I000001.rf)
+          var tabFile = StoredTabletFile.of(k.getColumnQualifier());
+          // Verify that the range is set correctly on the StoredTabletFile
+          assertEquals(fenced,
+              !tabFile.getRange().isInfiniteStartKey() || !tabFile.getRange().isInfiniteStopKey());
+          assertFalse(looksLikeRelativePath(tabFile.getMetadataPath()),
+              "Imported files should have absolute URIs, not relative: " + tabFile);
+        } else if (k.getColumnFamily().equals(ServerColumnFamily.NAME)) {
+          assertFalse(looksLikeRelativePath(value),
+              "Server directory should have absolute URI, not relative: " + value);
+        } else {
+          fail("Got expected pair: " + k + "=" + fileEntry.getValue());
+        }
+      }
+
+    }
+    // Online the original table before we verify equivalence
+    client.tableOperations().online(srcTable, true);
+
+    verifyTableEquality(client, srcTable, destTable, expected);
+  }
+
   @ParameterizedTest
   @ValueSource(booleans = {true, false})
   public void testExportImportThenScan(boolean fenced) throws Exception {
     try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
-
       String[] tableNames = getUniqueNames(2);
-      String srcTable = tableNames[0], destTable = tableNames[1];
-      client.tableOperations().create(srcTable);
+      doExportImportThenScan(fenced, client, tableNames[0], tableNames[1]);
+    }
+  }
 
-      try (BatchWriter bw = client.createBatchWriter(srcTable)) {
-        for (int row = 0; row < 1000; row++) {
-          Mutation m = new Mutation("row_" + String.format("%010d", row));
-          for (int col = 0; col < 100; col++) {
-            m.put(Integer.toString(col), "", Integer.toString(col * 2));
-          }
-          bw.addMutation(m);
-        }
-      }
-
-      client.tableOperations().compact(srcTable, null, null, true, true);
-
-      int expected = 100000;
-      // Test that files with ranges and are fenced work with export/import
-      if (fenced) {
-        // Split file into 3 ranges of 10000, 20000, and 5000 for a total of 35000
-        FileMetadataUtil.splitFilesIntoRanges(getServerContext(), srcTable, createRanges());
-        expected = 35000;
-      }
-
-      // Make a directory we can use to throw the export and import directories
-      // Must exist on the filesystem the cluster is running.
-      FileSystem fs = cluster.getFileSystem();
-      log.info("Using FileSystem: " + fs);
-      Path baseDir = new Path(cluster.getTemporaryPath(), getClass().getName());
-      fs.deleteOnExit(baseDir);
-      if (fs.exists(baseDir)) {
-        log.info("{} exists on filesystem, deleting", baseDir);
-        assertTrue(fs.delete(baseDir, true), "Failed to deleted " + baseDir);
-      }
-      log.info("Creating {}", baseDir);
-      assertTrue(fs.mkdirs(baseDir), "Failed to create " + baseDir);
-      Path exportDir = new Path(baseDir, "export");
-      fs.deleteOnExit(exportDir);
-      Path importDirA = new Path(baseDir, "import-a");
-      Path importDirB = new Path(baseDir, "import-b");
-      fs.deleteOnExit(importDirA);
-      fs.deleteOnExit(importDirB);
-      for (Path p : new Path[] {exportDir, importDirA, importDirB}) {
-        assertTrue(fs.mkdirs(p), "Failed to create " + p);
-      }
-
-      Set<String> importDirs = Set.of(importDirA.toString(), importDirB.toString());
-
-      Path[] importDirAry = new Path[] {importDirA, importDirB};
-
-      log.info("Exporting table to {}", exportDir);
-      log.info("Importing table from {}", importDirs);
-
-      // test fast fail offline check
-      assertThrows(IllegalStateException.class,
-          () -> client.tableOperations().exportTable(srcTable, exportDir.toString()));
-
-      // Offline the table
-      client.tableOperations().offline(srcTable, true);
-      // Then export it
-      client.tableOperations().exportTable(srcTable, exportDir.toString());
-
-      // Make sure the distcp.txt file that exporttable creates is available
-      Path distcp = new Path(exportDir, "distcp.txt");
-      fs.deleteOnExit(distcp);
-      assertTrue(fs.exists(distcp), "Distcp file doesn't exist");
-      FSDataInputStream is = fs.open(distcp);
-      BufferedReader reader = new BufferedReader(new InputStreamReader(is));
-
-      // Copy each file that was exported to one of the imports directory
-      String line;
-
-      while ((line = reader.readLine()) != null) {
-        Path p = new Path(line.substring(5));
-        assertTrue(fs.exists(p), "File doesn't exist: " + p);
-        Path importDir = importDirAry[RANDOM.get().nextInt(importDirAry.length)];
-        Path dest = new Path(importDir, p.getName());
-        assertFalse(fs.exists(dest), "Did not expect " + dest + " to exist");
-        FileUtil.copy(fs, p, fs, dest, false, fs.getConf());
-      }
-
-      reader.close();
-
-      log.info("Import dir A: {}", Arrays.toString(fs.listStatus(importDirA)));
-      log.info("Import dir B: {}", Arrays.toString(fs.listStatus(importDirB)));
-
-      // Import the exported data into a new table
-      client.tableOperations().importTable(destTable, importDirs, ImportConfiguration.empty());
-
-      // Get the table ID for the table that the importtable command created
-      final String tableId = client.tableOperations().tableIdMap().get(destTable);
-      assertNotNull(tableId);
-
-      // Get all `file` colfams from the metadata table for the new table
-      log.info("Imported into table with ID: {}", tableId);
-
-      try (Scanner s =
-          client.createScanner(AccumuloTable.METADATA.tableName(), Authorizations.EMPTY)) {
-        s.setRange(TabletsSection.getRange(TableId.of(tableId)));
-        s.fetchColumnFamily(DataFileColumnFamily.NAME);
-        ServerColumnFamily.DIRECTORY_COLUMN.fetch(s);
-
-        // Should find a single entry
-        for (Entry<Key,Value> fileEntry : s) {
-          Key k = fileEntry.getKey();
-          String value = fileEntry.getValue().toString();
-          if (k.getColumnFamily().equals(DataFileColumnFamily.NAME)) {
-            // The file should be an absolute URI (file:///...), not a relative path
-            // (/b-000.../I000001.rf)
-            var tabFile = StoredTabletFile.of(k.getColumnQualifier());
-            // Verify that the range is set correctly on the StoredTabletFile
-            assertEquals(fenced, !tabFile.getRange().isInfiniteStartKey()
-                || !tabFile.getRange().isInfiniteStopKey());
-            assertFalse(looksLikeRelativePath(tabFile.getMetadataPath()),
-                "Imported files should have absolute URIs, not relative: " + tabFile);
-          } else if (k.getColumnFamily().equals(ServerColumnFamily.NAME)) {
-            assertFalse(looksLikeRelativePath(value),
-                "Server directory should have absolute URI, not relative: " + value);
-          } else {
-            fail("Got expected pair: " + k + "=" + fileEntry.getValue());
-          }
-        }
-
-      }
-      // Online the original table before we verify equivalence
-      client.tableOperations().online(srcTable, true);
-
-      verifyTableEquality(client, srcTable, destTable, expected);
+  @ParameterizedTest
+  @ValueSource(booleans = {true, false})
+  public void testExportImportSameTableNameThenScan(boolean fenced) throws Exception {
+    try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
+      String ns1 = "namespace1";
+      client.namespaceOperations().create(ns1);
+      String ns2 = "namespace2";
+      client.namespaceOperations().create(ns2);
+      String tableName = getUniqueNames(1)[0];
+      doExportImportThenScan(fenced, client, ns1 + "." + tableName, ns2 + "." + tableName);
     }
   }
 
@@ -342,7 +358,7 @@ public class ImportExportIT extends AccumuloClusterHarness {
 
       // Get all `file` colfams from the metadata table for the new table
       try (Scanner s =
-          client.createScanner(AccumuloTable.METADATA.tableName(), Authorizations.EMPTY)) {
+          client.createScanner(SystemTables.METADATA.tableName(), Authorizations.EMPTY)) {
         s.setRange(TabletsSection.getRange(TableId.of(tableId)));
         s.fetchColumnFamily(DataFileColumnFamily.NAME);
         ServerColumnFamily.DIRECTORY_COLUMN.fetch(s);
@@ -518,9 +534,11 @@ public class ImportExportIT extends AccumuloClusterHarness {
     AccumuloCluster cluster = getCluster();
     assertTrue(cluster instanceof MiniAccumuloClusterImpl);
     MiniAccumuloClusterImpl mac = (MiniAccumuloClusterImpl) cluster;
-    String rootPath = mac.getConfig().getDir().getAbsolutePath();
     FileSystem fs = getCluster().getFileSystem();
-    FileStatus[] status = fs.listStatus(new Path(rootPath + "/accumulo/tables/" + destTableId));
+    // the following path expects mini to be configured with a single volume
+    final Path tablePath = new Path(mac.getSiteConfiguration().get(Property.INSTANCE_VOLUMES) + "/"
+        + Constants.TABLE_DIR + "/" + destTableId);
+    FileStatus[] status = fs.listStatus(tablePath);
     for (FileStatus tabletDir : status) {
       var contents = fs.listStatus(tabletDir.getPath());
       for (FileStatus file : contents) {
@@ -545,9 +563,10 @@ public class ImportExportIT extends AccumuloClusterHarness {
 
     // copy files each run will "move the files" on import, allows multiple runs in IDE without
     // rebuild
-    java.nio.file.Path importDirPath = Paths.get(importDir);
+    java.nio.file.Path importDirPath = java.nio.file.Path.of(importDir);
     java.nio.file.Files.createDirectories(importDirPath);
-    FileUtils.copyDirectory(new File(dataSrc), new File(importDir));
+    FileUtils.copyDirectory(java.nio.file.Path.of(dataSrc).toFile(),
+        java.nio.file.Path.of(importDir).toFile());
 
     String table = getUniqueNames(1)[0];
 
@@ -565,7 +584,7 @@ public class ImportExportIT extends AccumuloClusterHarness {
       assertEquals(7, rowCount);
       int metaFileCount = 0;
       try (Scanner s =
-          client.createScanner(AccumuloTable.METADATA.tableName(), Authorizations.EMPTY)) {
+          client.createScanner(SystemTables.METADATA.tableName(), Authorizations.EMPTY)) {
         TableId tid = TableId.of(client.tableOperations().tableIdMap().get(table));
         s.setRange(TabletsSection.getRange(tid));
         s.fetchColumnFamily(DataFileColumnFamily.NAME);
