@@ -23,6 +23,7 @@ import static org.apache.accumulo.core.metadata.schema.TabletMetadata.ColumnType
 import static org.apache.accumulo.core.metadata.schema.TabletMetadata.ColumnType.LOADED;
 import static org.apache.accumulo.core.metadata.schema.TabletMetadata.ColumnType.PREV_ROW;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -30,12 +31,14 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.math.BigInteger;
+import java.net.URI;
 import java.nio.file.Files;
-import java.nio.file.Paths;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.time.Duration;
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -49,6 +52,7 @@ import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
@@ -67,6 +71,7 @@ import org.apache.accumulo.core.client.admin.TabletAvailability;
 import org.apache.accumulo.core.client.admin.TabletInformation;
 import org.apache.accumulo.core.client.admin.TimeType;
 import org.apache.accumulo.core.clientImpl.ClientContext;
+import org.apache.accumulo.core.clientImpl.thrift.ThriftTableOperationException;
 import org.apache.accumulo.core.conf.AccumuloConfiguration;
 import org.apache.accumulo.core.conf.Property;
 import org.apache.accumulo.core.data.Key;
@@ -81,8 +86,8 @@ import org.apache.accumulo.core.dataImpl.KeyExtent;
 import org.apache.accumulo.core.file.FileOperations;
 import org.apache.accumulo.core.file.FileSKVWriter;
 import org.apache.accumulo.core.file.rfile.RFile;
-import org.apache.accumulo.core.metadata.AccumuloTable;
 import org.apache.accumulo.core.metadata.StoredTabletFile;
+import org.apache.accumulo.core.metadata.SystemTables;
 import org.apache.accumulo.core.metadata.UnreferencedTabletFile;
 import org.apache.accumulo.core.metadata.schema.MetadataSchema;
 import org.apache.accumulo.core.metadata.schema.MetadataTime;
@@ -91,6 +96,7 @@ import org.apache.accumulo.core.metadata.schema.TabletsMetadata;
 import org.apache.accumulo.core.security.Authorizations;
 import org.apache.accumulo.core.security.TablePermission;
 import org.apache.accumulo.core.spi.crypto.NoCryptoServiceFactory;
+import org.apache.accumulo.core.util.UtilWaitThread;
 import org.apache.accumulo.harness.MiniClusterConfigurationCallback;
 import org.apache.accumulo.harness.SharedMiniClusterBase;
 import org.apache.accumulo.minicluster.MemoryUnit;
@@ -100,6 +106,7 @@ import org.apache.accumulo.server.ServerContext;
 import org.apache.accumulo.server.constraints.MetadataConstraints;
 import org.apache.accumulo.server.constraints.SystemEnvironment;
 import org.apache.accumulo.test.util.Wait;
+import org.apache.commons.io.IOUtils;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.FSDataOutputStream;
 import org.apache.hadoop.fs.FileSystem;
@@ -113,6 +120,7 @@ import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
+import com.google.common.collect.MoreCollectors;
 import com.google.common.util.concurrent.MoreExecutors;
 
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
@@ -183,7 +191,7 @@ public class BulkNewIT extends SharedMiniClusterBase {
 
     String dir = getDir("/testSingleTabletSingleFileNoSplits-");
 
-    String h1 = writeData(dir + "/f1.", aconf, 0, 332);
+    String h1 = writeData(fs, dir + "/f1.", aconf, 0, 332);
 
     preLoadAction.call();
     c.tableOperations().importDirectory(dir).to(tableName).tableTime(setTime).load();
@@ -222,29 +230,28 @@ public class BulkNewIT extends SharedMiniClusterBase {
 
   @Test
   public void testSetTime() throws Exception {
-    try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
+    try (var client = (ClientContext) Accumulo.newClient().from(getClientProps()).build()) {
       tableName = "testSetTime_table1";
       NewTableConfiguration newTableConf = new NewTableConfiguration();
       // set logical time type so we can set time on bulk import
       newTableConf.setTimeType(TimeType.LOGICAL);
       client.tableOperations().create(tableName, newTableConf);
 
-      var ctx = (ClientContext) client;
-
-      var tablet = ctx.getAmple().readTablet(new KeyExtent(ctx.getTableId(tableName), null, null));
+      var tablet =
+          client.getAmple().readTablet(new KeyExtent(client.getTableId(tableName), null, null));
       assertEquals(new MetadataTime(0, TimeType.LOGICAL), tablet.getTime());
 
-      var extent = new KeyExtent(ctx.getTableId(tableName), new Text("0333"), null);
+      var extent = new KeyExtent(client.getTableId(tableName), new Text("0333"), null);
 
       testSingleTabletSingleFile(client, false, true, () -> {
         // Want to test with and without a location, assuming the tablet does not have a location
         // now. Need to validate that assumption.
-        assertNull(ctx.getAmple().readTablet(extent).getLocation());
+        assertNull(client.getAmple().readTablet(extent).getLocation());
         return null;
       });
 
       assertEquals(new MetadataTime(1, TimeType.LOGICAL),
-          ctx.getAmple().readTablet(extent).getTime());
+          client.getAmple().readTablet(extent).getTime());
 
       int added = 0;
       try (var writer = client.createBatchWriter(tableName);
@@ -263,7 +270,7 @@ public class BulkNewIT extends SharedMiniClusterBase {
       // Writes to a tablet should not change time unless it flushes, so time in metadata table
       // should be the same
       assertEquals(new MetadataTime(1, TimeType.LOGICAL),
-          ctx.getAmple().readTablet(extent).getTime());
+          client.getAmple().readTablet(extent).getTime());
 
       // verify data written by batch writer overwrote bulk imported data
       try (var scanner = client.createScanner(tableName)) {
@@ -278,10 +285,10 @@ public class BulkNewIT extends SharedMiniClusterBase {
       }
 
       String dir = getDir("/testSetTime-");
-      writeData(dir + "/f1.", aconf, 0, 332);
+      writeData(fs, dir + "/f1.", aconf, 0, 332);
 
       // For this import tablet should be hosted so the bulk import operation will have to
-      // coordinate getting time with the hosted tablet. The time should refect the batch writes
+      // coordinate getting time with the hosted tablet. The time should reflect the batch writes
       // just done.
       client.tableOperations().importDirectory(dir).to(tableName).tableTime(true).load();
 
@@ -298,13 +305,13 @@ public class BulkNewIT extends SharedMiniClusterBase {
 
       // the bulk import should update the time in the metadata table
       assertEquals(new MetadataTime(2 + added, TimeType.LOGICAL),
-          ctx.getAmple().readTablet(extent).getTime());
+          client.getAmple().readTablet(extent).getTime());
 
       client.tableOperations().flush(tableName, null, null, true);
 
       // the flush should not change the time in the metadata table
       assertEquals(new MetadataTime(2 + added, TimeType.LOGICAL),
-          ctx.getAmple().readTablet(extent).getTime());
+          client.getAmple().readTablet(extent).getTime());
 
       try (var scanner = client.createScanner("accumulo.metadata")) {
         scanner.forEach((k, v) -> System.out.println(k + " " + v));
@@ -346,6 +353,198 @@ public class BulkNewIT extends SharedMiniClusterBase {
     }
   }
 
+  @Test
+  public void testPause() throws Exception {
+    try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
+      tableName = "testPause_table1";
+      NewTableConfiguration newTableConf = new NewTableConfiguration();
+      var props =
+          Map.of(Property.TABLE_FILE_PAUSE.getKey(), "5", Property.TABLE_MAJC_RATIO.getKey(), "20");
+      newTableConf.setProperties(props);
+      client.tableOperations().create(tableName, newTableConf);
+
+      addSplits(client, tableName, "0060 0120");
+      String dir = getDir("/testPause1-");
+
+      for (int i = 0; i < 18; i++) {
+        writeData(fs, dir + "/f" + i + ".", aconf, i * 10, (i + 1) * 10 - 1);
+      }
+
+      client.tableOperations().importDirectory(dir).to(tableName).tableTime(true).load();
+      verifyData(client, tableName, 0, 179, false);
+
+      String dir2 = getDir("/testPause2-");
+
+      for (int i = 0; i < 18; i++) {
+        writeData(fs, dir2 + "/f" + i + ".", aconf, i * 10, (i + 1) * 10 - 1, 1000);
+      }
+
+      // Start a second bulk import in background thread because it is expected this bulk import
+      // will hang because tablets are over the pause file limit.
+      ExecutorService executor = Executors.newFixedThreadPool(1);
+      var future = executor.submit(() -> {
+        client.tableOperations().importDirectory(dir2).to(tableName).tableTime(true).load();
+        return null;
+      });
+
+      // sleep a bit to give the bulk import a chance to run
+      UtilWaitThread.sleep(3000);
+      // bulk import should not have gone through it should be pausing because the tablet have too
+      // many files
+      assertFalse(future.isDone());
+      verifyData(client, tableName, 0, 179, false);
+
+      // Before the bulk import runs no tablets should have loaded flags set
+      assertEquals(Map.of("0060", 0, "0120", 0, "null", 0), countLoaded(client, tableName));
+      // compacting the first tablet should allow the import on that tablet to proceed
+      client.tableOperations().compact(tableName,
+          new CompactionConfig().setWait(true).setEndRow(new Text("0060")));
+      // Wait for the first tablets data to be updated by bulk import.
+      Wait.waitFor(
+          () -> Map.of("0060", 7, "0120", 0, "null", 0).equals(countLoaded(client, tableName)));
+
+      // The bulk imports on the other tablets should not have gone through, verify their data was
+      // not updated. Spot check a few rows in the other two tablets. The first tablet may or may
+      // not be updated on the tablet server at this point, so can not look at its data.
+      assertEquals(61L, readRowValue(client, tableName, 61));
+      assertEquals(100L, readRowValue(client, tableName, 100));
+      assertEquals(140L, readRowValue(client, tableName, 140));
+
+      // compact the entire table, should allow all bulk imports to go through
+      client.tableOperations().compact(tableName, new CompactionConfig().setWait(true));
+      // wait for bulk import to complete
+      future.get();
+      // verify the values were updated by the bulk import that was paused
+      verifyData(client, tableName, 0, 179, 1000, false);
+      assertEquals(Map.of("0060", 0, "0120", 0, "null", 0), countLoaded(client, tableName));
+    }
+  }
+
+  @Test
+  public void testMaxTabletsPerFile() throws Exception {
+    try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
+      tableName = "testMaxTabletsPerFile_table1";
+      NewTableConfiguration newTableConf = new NewTableConfiguration();
+      var props = Map.of(Property.TABLE_BULK_MAX_TABLET_FILES.getKey(), "5");
+      newTableConf.setProperties(props);
+      client.tableOperations().create(tableName, newTableConf);
+
+      var tableId = ((ClientContext) client).getTableId(tableName);
+
+      String dir = getDir("/testBulkFileMFP-");
+
+      for (int i = 4; i < 8; i++) {
+        writeData(fs, dir + "/f" + i + ".", aconf, i * 10, (i + 1) * 10 - 1);
+      }
+
+      // should be able to bulk import 4 files w/o issue
+      client.tableOperations().importDirectory(dir).to(tableName).load();
+
+      verifyData(client, tableName, 40, 79, false);
+
+      var dir2 = getDir("/testBulkFileMFP2-");
+      for (int i = 12; i < 18; i++) {
+        writeData(fs, dir2 + "/f" + i + ".", aconf, i * 10, (i + 1) * 10 - 1);
+      }
+
+      var exception = assertThrows(AccumuloException.class,
+          () -> client.tableOperations().importDirectory(dir2).to(tableName).load());
+      var msg = ((ThriftTableOperationException) exception.getCause()).getDescription();
+      // message should contain the limit of 5 and the number of files attempted to import 6
+      assertTrue(msg.contains(" 5"), msg);
+      assertTrue(msg.contains(" 6"), msg);
+      // error should include range information
+      assertTrue(msg.contains(tableId + "<<"), msg);
+      assertTrue(msg.contains(" " + Property.TABLE_BULK_MAX_TABLET_FILES.getKey()), msg);
+
+      // ensure no data was added to table
+      verifyData(client, tableName, 40, 79, false);
+
+      // tested a table w/ single tablet, now test a table w/ three tablets and try importing into
+      // the first, middle, and last tablet
+      addSplits(client, tableName, "0100 0200");
+
+      // try the first tablet
+      var dir3 = getDir("/testBulkFileMFP3-");
+      for (int i = 0; i < 7; i++) {
+        writeData(fs, dir3 + "/f" + i + ".", aconf, i * 10, (i + 1) * 10 - 1);
+      }
+      // add single file for the last tablet, this does not exceed the limit however it should not
+      // go through
+      writeData(fs, dir3 + "/f_last.", aconf, 300, 400);
+      exception = assertThrows(AccumuloException.class,
+          () -> client.tableOperations().importDirectory(dir3).to(tableName).load());
+      // verify no files were moved by the failed bulk import
+      assertEquals(8, Arrays.stream(
+          getCluster().getFileSystem().listStatus(new Path(dir3), f -> f.getName().endsWith(".rf")))
+          .count());
+      msg = ((ThriftTableOperationException) exception.getCause()).getDescription();
+      // message should contain the limit of 5 and the number of files attempted to import 7
+      assertTrue(msg.contains(" 5"), msg);
+      assertTrue(msg.contains(" 7"), msg);
+      assertTrue(msg.contains(tableId + ";0100<"), msg);
+      assertTrue(msg.contains(" " + Property.TABLE_BULK_MAX_TABLET_FILES.getKey()), msg);
+      verifyData(client, tableName, 40, 79, false);
+
+      // try the middle tablet
+      var dir4 = getDir("/testBulkFileMFP4-");
+      for (int i = 11; i < 17; i++) {
+        writeData(fs, dir4 + "/f" + i + ".", aconf, i * 10, (i + 1) * 10 - 1);
+      }
+      // add single file for the last tablet, this does not exceed the limit however it should not
+      // go through
+      writeData(fs, dir4 + "/f_last.", aconf, 300, 400);
+      exception = assertThrows(AccumuloException.class,
+          () -> client.tableOperations().importDirectory(dir4).to(tableName).load());
+      // verify no files were moved by the failed bulk import
+      assertEquals(7, Arrays.stream(
+          getCluster().getFileSystem().listStatus(new Path(dir4), f -> f.getName().endsWith(".rf")))
+          .count());
+      msg = ((ThriftTableOperationException) exception.getCause()).getDescription();
+      // message should contain the limit of 5 and the number of files attempted to import 6
+      assertTrue(msg.contains(" 5"), msg);
+      assertTrue(msg.contains(" 6"), msg);
+      assertTrue(msg.contains(tableId + ";0200;0100"), msg);
+      assertTrue(msg.contains(" " + Property.TABLE_BULK_MAX_TABLET_FILES.getKey()), msg);
+      verifyData(client, tableName, 40, 79, false);
+
+      // try the last tablet
+      var dir5 = getDir("/testBulkFileMFP5-");
+      for (int i = 21; i < 28; i++) {
+        writeData(fs, dir5 + "/f" + i + ".", aconf, i * 10, (i + 1) * 10 - 1);
+      }
+      // add single file for the first tablet, this does not exceed the limit however it should not
+      // go through
+      writeData(fs, dir5 + "/f_last.", aconf, 0, 10);
+      exception = assertThrows(AccumuloException.class,
+          () -> client.tableOperations().importDirectory(dir5).to(tableName).load());
+      // verify no files were moved by the failed bulk import
+      assertEquals(8, Arrays.stream(
+          getCluster().getFileSystem().listStatus(new Path(dir5), f -> f.getName().endsWith(".rf")))
+          .count());
+      msg = ((ThriftTableOperationException) exception.getCause()).getDescription();
+      // message should contain the limit of 5 and the number of files attempted to import 7
+      assertTrue(msg.contains(" 5"), msg);
+      assertTrue(msg.contains(" 7"), msg);
+      assertTrue(msg.contains(tableId + "<;0200"), msg);
+      assertTrue(msg.contains(" " + Property.TABLE_BULK_MAX_TABLET_FILES.getKey()), msg);
+      verifyData(client, tableName, 40, 79, false);
+
+      // test an import that has more files than the limit, but not in a single tablet so it should
+      // work
+      var dir6 = getDir("/testBulkFileMFP6-");
+      for (int i = 8; i < 14; i++) {
+        writeData(fs, dir6 + "/f" + i + ".", aconf, i * 10, (i + 1) * 10 - 1);
+      }
+      client.tableOperations().importDirectory(dir6).to(tableName).load();
+      // verify the bulk import moved the files
+      assertEquals(0, Arrays.stream(
+          getCluster().getFileSystem().listStatus(new Path(dir6), f -> f.getName().endsWith(".rf")))
+          .count());
+      verifyData(client, tableName, 40, 139, false);
+    }
+  }
+
   private void testSingleTabletSingleFileNoSplits(AccumuloClient c, boolean offline)
       throws Exception {
     if (offline) {
@@ -354,7 +553,7 @@ public class BulkNewIT extends SharedMiniClusterBase {
 
     String dir = getDir("/testSingleTabletSingleFileNoSplits-");
 
-    String h1 = writeData(dir + "/f1.", aconf, 0, 333);
+    String h1 = writeData(fs, dir + "/f1.", aconf, 0, 333);
 
     c.tableOperations().importDirectory(dir).to(tableName).load();
 
@@ -387,7 +586,7 @@ public class BulkNewIT extends SharedMiniClusterBase {
 
       String dir = getDir("/testBadPermissions-");
 
-      writeData(dir + "/f1.", aconf, 0, 333);
+      writeData(fs, dir + "/f1.", aconf, 0, 333);
 
       Path rFilePath = new Path(dir, "f1." + RFile.EXTENSION);
       FsPermission originalPerms = fs.getFileStatus(rFilePath).getPermission();
@@ -435,21 +634,21 @@ public class BulkNewIT extends SharedMiniClusterBase {
       out.close();
 
       // 1 Tablet 0333-null
-      String h1 = writeData(dir + "/f1.", aconf, 0, 333);
+      String h1 = writeData(fs, dir + "/f1.", aconf, 0, 333);
       hashes.get("0333").add(h1);
 
       // 2 Tablets 0666-0334, 0999-0667
-      String h2 = writeData(dir + "/f2.", aconf, 334, 999);
+      String h2 = writeData(fs, dir + "/f2.", aconf, 334, 999);
       hashes.get("0666").add(h2);
       hashes.get("0999").add(h2);
 
       // 2 Tablets 1333-1000, 1666-1334
-      String h3 = writeData(dir + "/f3.", aconf, 1000, 1499);
+      String h3 = writeData(fs, dir + "/f3.", aconf, 1000, 1499);
       hashes.get("1333").add(h3);
       hashes.get("1666").add(h3);
 
       // 2 Tablets 1666-1334, >1666
-      String h4 = writeData(dir + "/f4.", aconf, 1500, 1999);
+      String h4 = writeData(fs, dir + "/f4.", aconf, 1500, 1999);
       hashes.get("1666").add(h4);
       hashes.get("null").add(h4);
 
@@ -489,21 +688,21 @@ public class BulkNewIT extends SharedMiniClusterBase {
       out.close();
 
       // 1 Tablet 0333-null
-      String h1 = writeData(dir + "/f1.", aconf, 0, 333);
+      String h1 = writeData(fs, dir + "/f1.", aconf, 0, 333);
       hashes.get("0333").add(h1);
 
       // 3 Tablets 0666-0334, 0999-0667, 1333-1000
-      String h2 = writeData(dir + "/bad-file.", aconf, 334, 1333);
+      String h2 = writeData(fs, dir + "/bad-file.", aconf, 334, 1333);
       hashes.get("0666").add(h2);
       hashes.get("0999").add(h2);
       hashes.get("1333").add(h2);
 
       // 1 Tablet 1666-1334
-      String h3 = writeData(dir + "/f3.", aconf, 1334, 1499);
+      String h3 = writeData(fs, dir + "/f3.", aconf, 1334, 1499);
       hashes.get("1666").add(h3);
 
       // 2 Tablets 1666-1334, >1666
-      String h4 = writeData(dir + "/f4.", aconf, 1500, 1999);
+      String h4 = writeData(fs, dir + "/f4.", aconf, 1500, 1999);
       hashes.get("1666").add(h4);
       hashes.get("null").add(h4);
 
@@ -549,8 +748,8 @@ public class BulkNewIT extends SharedMiniClusterBase {
 
       String dir = getDir("/testBulkFile-");
 
-      writeData(dir + "/f1.", aconf, 0, 333);
-      writeData(dir + "/f2.", aconf, 0, 666);
+      writeData(fs, dir + "/f1.", aconf, 0, 333);
+      writeData(fs, dir + "/f2.", aconf, 0, 666);
 
       final var importMappingOptions = c.tableOperations().importDirectory(dir).to(tableName);
 
@@ -571,6 +770,68 @@ public class BulkNewIT extends SharedMiniClusterBase {
           .loadFileTo("f2.rf", RangeType.TABLE, null, row(555)).build();
       final var nonExistentBoundary = importMappingOptions.plan(loadPlan);
       assertThrows(AccumuloException.class, nonExistentBoundary::load);
+
+      // Create an empty load plan
+      loadPlan = LoadPlan.builder().build();
+      final var emptyLoadPlan = importMappingOptions.plan(loadPlan);
+      assertThrows(IllegalArgumentException.class, emptyLoadPlan::load);
+    }
+  }
+
+  @Test
+  public void testComputeLoadPlan() throws Exception {
+
+    try (AccumuloClient c = Accumulo.newClient().from(getClientProps()).build()) {
+      addSplits(c, tableName, "0333 0666 0999 1333 1666");
+
+      String dir = getDir("/testBulkFile-");
+
+      Map<String,Set<String>> hashes = new HashMap<>();
+      String h1 = writeData(fs, dir + "/f1.", aconf, 0, 333);
+      hashes.put("0333", new HashSet<>(List.of(h1)));
+      String h2 = writeData(fs, dir + "/f2.", aconf, 0, 666);
+      hashes.get("0333").add(h2);
+      hashes.put("0666", new HashSet<>(List.of(h2)));
+      String h3 = writeData(fs, dir + "/f3.", aconf, 334, 700);
+      hashes.get("0666").add(h3);
+      hashes.put("0999", new HashSet<>(List.of(h3)));
+      hashes.put("1333", Set.of());
+      hashes.put("1666", Set.of());
+      hashes.put("null", Set.of());
+
+      SortedSet<Text> splits = new TreeSet<>(c.tableOperations().listSplits(tableName));
+
+      for (String filename : List.of("f1.rf", "f2.rf", "f3.rf")) {
+        // The body of this loop simulates what each reducer would do
+        Path path = new Path(dir + "/" + filename);
+
+        // compute the load plan for the rfile
+        URI file = path.toUri();
+        String lpJson = LoadPlan.compute(file, LoadPlan.SplitResolver.from(splits)).toJson();
+
+        // save the load plan to a file
+        Path lpPath = new Path(path.getParent(), path.getName().replace(".rf", ".lp"));
+        try (var output = getCluster().getFileSystem().create(lpPath, false)) {
+          IOUtils.write(lpJson, output, UTF_8);
+        }
+      }
+
+      // This simulates the code that would run after the map reduce job and bulk import the files
+      var builder = LoadPlan.builder();
+      for (var status : getCluster().getFileSystem().listStatus(new Path(dir),
+          p -> p.getName().endsWith(".lp"))) {
+        try (var input = getCluster().getFileSystem().open(status.getPath())) {
+          String lpJson = IOUtils.toString(input, UTF_8);
+          builder.addPlan(LoadPlan.fromJson(lpJson));
+        }
+      }
+
+      LoadPlan lpAll = builder.build();
+
+      c.tableOperations().importDirectory(dir).to(tableName).plan(lpAll).load();
+
+      verifyData(c, tableName, 0, 700, false);
+      verifyMetadata(c, tableName, hashes);
     }
   }
 
@@ -610,7 +871,7 @@ public class BulkNewIT extends SharedMiniClusterBase {
 
       addSplits(c, tableName, "0333");
 
-      var h1 = writeData(dir + "/f1.", aconf, 333, 333);
+      var h1 = writeData(fs, dir + "/f1.", aconf, 333, 333);
 
       c.tableOperations().importDirectory(dir).to(tableName).load();
 
@@ -633,7 +894,7 @@ public class BulkNewIT extends SharedMiniClusterBase {
       addSplits(c, tableName, "5000");
 
       for (int i = 0; i < 100; i++) {
-        writeData(dir + "/f" + i + ".", aconf, i * 100, (i + 1) * 100 - 1);
+        writeData(fs, dir + "/f" + i + ".", aconf, i * 100, (i + 1) * 100 - 1);
       }
 
       c.tableOperations().importDirectory(dir).to(tableName).load();
@@ -688,7 +949,7 @@ public class BulkNewIT extends SharedMiniClusterBase {
           String iterationDir = dir + "/iteration" + i;
           // Create 10 files for the bulk import.
           for (int f = 0; f < 10; f++) {
-            writeData(iterationDir + "/f" + f + ".", aconf, f * 1000, (f + 1) * 1000 - 1);
+            writeData(fs, iterationDir + "/f" + f + ".", aconf, f * 1000, (f + 1) * 1000 - 1);
           }
           c.tableOperations().importDirectory(iterationDir).to(tableName).tableTime(true).load();
           getCluster().getFileSystem().delete(new Path(iterationDir), true);
@@ -741,7 +1002,7 @@ public class BulkNewIT extends SharedMiniClusterBase {
 
       String dir = getDir("/testExceptionInMetadataUpdate-");
 
-      writeData(dir + "/f1.", aconf, 0, 333);
+      writeData(fs, dir + "/f1.", aconf, 0, 333);
 
       // operation should fail with the constraint on the table
       assertThrows(AccumuloException.class,
@@ -750,7 +1011,7 @@ public class BulkNewIT extends SharedMiniClusterBase {
       removeBulkConstraint(getPrincipal(), c);
 
       // should succeed after removing the constraint
-      String h1 = writeData(dir + "/f1.", aconf, 0, 333);
+      String h1 = writeData(fs, dir + "/f1.", aconf, 0, 333);
       c.tableOperations().importDirectory(dir).to(tableName).load();
 
       // verifty the data was bulk imported
@@ -794,11 +1055,11 @@ public class BulkNewIT extends SharedMiniClusterBase {
       Wait.waitFor(() -> getLocationStatus(c, tableName).equals(expectedHosting));
 
       // create files that straddle tables w/ different Availability settings
-      writeData(dir + "/f1.", aconf, 0, 150);
-      writeData(dir + "/f2.", aconf, 151, 250);
-      writeData(dir + "/f3.", aconf, 251, 350);
-      writeData(dir + "/f4.", aconf, 351, 450);
-      writeData(dir + "/f5.", aconf, 451, 550);
+      writeData(fs, dir + "/f1.", aconf, 0, 150);
+      writeData(fs, dir + "/f2.", aconf, 151, 250);
+      writeData(fs, dir + "/f3.", aconf, 251, 350);
+      writeData(fs, dir + "/f4.", aconf, 351, 450);
+      writeData(fs, dir + "/f5.", aconf, 451, 550);
 
       c.tableOperations().importDirectory(dir).to(tableName).load();
 
@@ -826,6 +1087,59 @@ public class BulkNewIT extends SharedMiniClusterBase {
         var seen = scanner.stream().map(e -> e.getKey().getRowData().toString())
             .collect(Collectors.toSet());
         assertEquals(expected, seen);
+      }
+    }
+  }
+
+  @Test
+  public void testManyTabletAndFiles() throws Exception {
+    try (AccumuloClient c = Accumulo.newClient().from(getClientProps()).build()) {
+      String dir = getDir("/testBulkFile-");
+      FileSystem fs = getCluster().getFileSystem();
+      fs.mkdirs(new Path(dir));
+
+      TreeSet<Text> splits = IntStream.range(1, 9000).mapToObj(BulkNewIT::row).map(Text::new)
+          .collect(Collectors.toCollection(TreeSet::new));
+      c.tableOperations().addSplits(tableName, splits);
+
+      var executor = Executors.newFixedThreadPool(16);
+      var futures = new ArrayList<Future<?>>();
+
+      var loadPlanBuilder = LoadPlan.builder();
+      var rowsExpected = new HashSet<>();
+      var imports = IntStream.range(2, 8999).boxed().collect(Collectors.toList());
+      // The order in which imports are added to the load plan should not matter so test that.
+      Collections.shuffle(imports);
+      for (var data : imports) {
+        String filename = "f" + data + ".";
+        loadPlanBuilder.loadFileTo(filename + RFile.EXTENSION, RangeType.TABLE, row(data - 1),
+            row(data));
+        var future = executor.submit(() -> {
+          writeData(fs, dir + "/" + filename, aconf, data, data);
+          return null;
+        });
+        futures.add(future);
+        rowsExpected.add(row(data));
+      }
+
+      for (var future : futures) {
+        future.get();
+      }
+
+      executor.shutdown();
+
+      var loadPlan = loadPlanBuilder.build();
+
+      c.tableOperations().importDirectory(dir).to(tableName).plan(loadPlan).load();
+
+      // using a batch scanner can read from lots of tablets w/ less RPCs
+      try (var scanner = c.createBatchScanner(tableName)) {
+        // use a scan server so that tablets do not need to be hosted
+        scanner.setConsistencyLevel(ScannerBase.ConsistencyLevel.EVENTUAL);
+        scanner.setRanges(List.of(new Range()));
+        var rowsSeen = scanner.stream().map(e -> e.getKey().getRowData().toString())
+            .collect(Collectors.toSet());
+        assertEquals(rowsExpected, rowsSeen);
       }
     }
   }
@@ -862,6 +1176,49 @@ public class BulkNewIT extends SharedMiniClusterBase {
     }
   }
 
+  @Test
+  public void testManyTablets() throws Exception {
+
+    try (AccumuloClient c = Accumulo.newClient().from(getClientProps()).build()) {
+      String dir = getDir("/testManyTablets-");
+      writeData(fs, dir + "/f1.", aconf, 0, 199);
+      writeData(fs, dir + "/f2.", aconf, 200, 399);
+      writeData(fs, dir + "/f3.", aconf, 400, 599);
+      writeData(fs, dir + "/f4.", aconf, 600, 799);
+      writeData(fs, dir + "/f5.", aconf, 800, 999);
+
+      var splits = IntStream.range(1, 1000).mapToObj(BulkNewIT::row).map(Text::new)
+          .collect(Collectors.toCollection(TreeSet::new));
+
+      // faster to create a table w/ lots of splits
+      c.tableOperations().delete(tableName);
+      var props = Map.of(Property.TABLE_BULK_MAX_TABLETS.getKey(), "500");
+      c.tableOperations().create(tableName, new NewTableConfiguration().withSplits(splits)
+          .withInitialTabletAvailability(TabletAvailability.HOSTED).setProperties(props));
+
+      var lpBuilder = LoadPlan.builder();
+      lpBuilder.loadFileTo("f1.rf", RangeType.TABLE, null, row(1));
+      IntStream.range(2, 200)
+          .forEach(i -> lpBuilder.loadFileTo("f1.rf", RangeType.TABLE, row(i - 1), row(i)));
+      IntStream.range(200, 400)
+          .forEach(i -> lpBuilder.loadFileTo("f2.rf", RangeType.TABLE, row(i - 1), row(i)));
+      IntStream.range(400, 600)
+          .forEach(i -> lpBuilder.loadFileTo("f3.rf", RangeType.TABLE, row(i - 1), row(i)));
+      IntStream.range(600, 800)
+          .forEach(i -> lpBuilder.loadFileTo("f4.rf", RangeType.TABLE, row(i - 1), row(i)));
+      IntStream.range(800, 1000)
+          .forEach(i -> lpBuilder.loadFileTo("f5.rf", RangeType.TABLE, row(i - 1), row(i)));
+
+      var loadPlan = lpBuilder.build();
+
+      c.tableOperations().importDirectory(dir).to(tableName).plan(loadPlan).load();
+
+      verifyData(c, tableName, 0, 999, false);
+
+    }
+
+  }
+
   private void addSplits(AccumuloClient client, String tableName, String splitString)
       throws Exception {
     SortedSet<Text> splits = new TreeSet<>();
@@ -871,8 +1228,32 @@ public class BulkNewIT extends SharedMiniClusterBase {
     client.tableOperations().addSplits(tableName, splits);
   }
 
-  private void verifyData(AccumuloClient client, String table, int start, int end, boolean setTime)
-      throws Exception {
+  private long readRowValue(AccumuloClient client, String table, int row) throws Exception {
+    try (var scanner = client.createScanner(table)) {
+      scanner.setRange(new Range(row(row)));
+      var value = scanner.stream().map(Entry::getValue).map(Value::toString)
+          .collect(MoreCollectors.onlyElement());
+      return Long.parseLong(value);
+    }
+  }
+
+  private Map<String,Integer> countLoaded(AccumuloClient client, String table) throws Exception {
+    var ctx = ((ClientContext) client);
+    var tableId = ctx.getTableId(table);
+
+    try (var tabletsMetadata = ctx.getAmple().readTablets().forTable(tableId).build()) {
+      Map<String,Integer> counts = new HashMap<>();
+      for (var tabletMetadata : tabletsMetadata) {
+        String endRow =
+            tabletMetadata.getEndRow() == null ? "null" : tabletMetadata.getEndRow().toString();
+        counts.put(endRow, tabletMetadata.getLoaded().size());
+      }
+      return counts;
+    }
+  }
+
+  private static void verifyData(AccumuloClient client, String table, int start, int end,
+      int valueOffset, boolean setTime) throws Exception {
     try (Scanner scanner = client.createScanner(table, Authorizations.EMPTY)) {
 
       Iterator<Entry<Key,Value>> iter = scanner.iterator();
@@ -890,7 +1271,7 @@ public class BulkNewIT extends SharedMiniClusterBase {
           throw new Exception("unexpected row " + entry.getKey() + " " + i);
         }
 
-        if (Integer.parseInt(entry.getValue().toString()) != i) {
+        if (Integer.parseInt(entry.getValue().toString()) != valueOffset + i) {
           throw new Exception("unexpected value " + entry + " " + i);
         }
 
@@ -905,7 +1286,12 @@ public class BulkNewIT extends SharedMiniClusterBase {
     }
   }
 
-  private void verifyMetadata(AccumuloClient client, String tableName,
+  private void verifyData(AccumuloClient client, String table, int start, int end, boolean setTime)
+      throws Exception {
+    verifyData(client, table, start, end, 0, setTime);
+  }
+
+  public static void verifyMetadata(AccumuloClient client, String tableName,
       Map<String,Set<String>> expectedHashes) {
 
     Set<String> endRowsSeen = new HashSet<>();
@@ -921,7 +1307,7 @@ public class BulkNewIT extends SharedMiniClusterBase {
 
         String endRow = tablet.getEndRow() == null ? "null" : tablet.getEndRow().toString();
 
-        assertEquals(expectedHashes.get(endRow), fileHashes);
+        assertEquals(expectedHashes.get(endRow), fileHashes, "endRow " + endRow);
 
         endRowsSeen.add(endRow);
       }
@@ -932,9 +1318,9 @@ public class BulkNewIT extends SharedMiniClusterBase {
 
   @SuppressFBWarnings(value = {"PATH_TRAVERSAL_IN", "WEAK_MESSAGE_DIGEST_SHA1"},
       justification = "path provided by test; sha-1 is okay for test")
-  private String hash(String filename) {
+  public static String hash(String filename) {
     try {
-      byte[] data = Files.readAllBytes(Paths.get(filename.replaceFirst("^file:", "")));
+      byte[] data = Files.readAllBytes(java.nio.file.Path.of(filename.replaceFirst("^file:", "")));
       byte[] hash = MessageDigest.getInstance("SHA1").digest(data);
       return new BigInteger(1, hash).toString(16);
     } catch (IOException | NoSuchAlgorithmException e) {
@@ -942,13 +1328,12 @@ public class BulkNewIT extends SharedMiniClusterBase {
     }
   }
 
-  private static String row(int r) {
+  public static String row(int r) {
     return String.format("%04d", r);
   }
 
-  private String writeData(String file, AccumuloConfiguration aconf, int s, int e)
-      throws Exception {
-    FileSystem fs = getCluster().getFileSystem();
+  public static String writeData(FileSystem fs, String file, AccumuloConfiguration aconf, int s,
+      int e, int valueOffset) throws Exception {
     String filename = file + RFile.EXTENSION;
     try (FileSKVWriter writer = FileOperations.getInstance().newWriterBuilder()
         .forFile(UnreferencedTabletFile.of(fs, new Path(filename)), fs, fs.getConf(),
@@ -956,11 +1341,16 @@ public class BulkNewIT extends SharedMiniClusterBase {
         .withTableConfiguration(aconf).build()) {
       writer.startDefaultLocalityGroup();
       for (int i = s; i <= e; i++) {
-        writer.append(new Key(new Text(row(i))), new Value(Integer.toString(i)));
+        writer.append(new Key(new Text(row(i))), new Value(Integer.toString(valueOffset + i)));
       }
     }
 
     return hash(filename);
+  }
+
+  private String writeData(FileSystem fs, String file, AccumuloConfiguration aconf, int s, int e)
+      throws Exception {
+    return writeData(fs, file, aconf, s, e, 0);
   }
 
   /**
@@ -1006,12 +1396,12 @@ public class BulkNewIT extends SharedMiniClusterBase {
   static void setupBulkConstraint(String principal, AccumuloClient c)
       throws AccumuloException, AccumuloSecurityException, TableNotFoundException {
     // add a constraint to the metadata table that disallows bulk import files to be added
-    c.securityOperations().grantTablePermission(principal, AccumuloTable.METADATA.tableName(),
+    c.securityOperations().grantTablePermission(principal, SystemTables.METADATA.tableName(),
         TablePermission.WRITE);
-    c.securityOperations().grantTablePermission(principal, AccumuloTable.METADATA.tableName(),
+    c.securityOperations().grantTablePermission(principal, SystemTables.METADATA.tableName(),
         TablePermission.ALTER_TABLE);
 
-    c.tableOperations().addConstraint(AccumuloTable.METADATA.tableName(),
+    c.tableOperations().addConstraint(SystemTables.METADATA.tableName(),
         NoBulkConstratint.class.getName());
 
     var metaConstraints = new MetadataConstraints();
@@ -1022,12 +1412,12 @@ public class BulkNewIT extends SharedMiniClusterBase {
 
     // wait for the constraint to be active on the metadata table
     Wait.waitFor(() -> {
-      try (var bw = c.createBatchWriter(AccumuloTable.METADATA.tableName())) {
+      try (var bw = c.createBatchWriter(SystemTables.METADATA.tableName())) {
         Mutation m = new Mutation("~garbage");
         m.put("", "", NoBulkConstratint.CANARY_VALUE);
         // This test assume the metadata constraint check will not flag this mutation, the following
         // validates this assumption.
-        assertNull(metaConstraints.check(env, m));
+        assertTrue(metaConstraints.check(env, m).isEmpty());
         bw.addMutation(m);
         return false;
       } catch (MutationsRejectedException e) {
@@ -1037,7 +1427,7 @@ public class BulkNewIT extends SharedMiniClusterBase {
     });
 
     // delete the junk added to the metadata table
-    try (var bw = c.createBatchWriter(AccumuloTable.METADATA.tableName())) {
+    try (var bw = c.createBatchWriter(SystemTables.METADATA.tableName())) {
       Mutation m = new Mutation("~garbage");
       m.putDelete("", "");
       bw.addMutation(m);
@@ -1046,12 +1436,12 @@ public class BulkNewIT extends SharedMiniClusterBase {
 
   static void removeBulkConstraint(String principal, AccumuloClient c)
       throws AccumuloException, TableNotFoundException, AccumuloSecurityException {
-    int constraintNum = c.tableOperations().listConstraints(AccumuloTable.METADATA.tableName())
+    int constraintNum = c.tableOperations().listConstraints(SystemTables.METADATA.tableName())
         .get(NoBulkConstratint.class.getName());
-    c.tableOperations().removeConstraint(AccumuloTable.METADATA.tableName(), constraintNum);
-    c.securityOperations().revokeTablePermission(principal, AccumuloTable.METADATA.tableName(),
+    c.tableOperations().removeConstraint(SystemTables.METADATA.tableName(), constraintNum);
+    c.securityOperations().revokeTablePermission(principal, SystemTables.METADATA.tableName(),
         TablePermission.WRITE);
-    c.securityOperations().revokeTablePermission(principal, AccumuloTable.METADATA.tableName(),
+    c.securityOperations().revokeTablePermission(principal, SystemTables.METADATA.tableName(),
         TablePermission.ALTER_TABLE);
   }
 }
